# shared-context-server

./: .env.docker  .env.example  .env.minimal  .gitignore  .pre-commit-config.yaml  ADVANCED_RESEARCH_SHARED_CONTEXT_SERVER.md  AGENTS.md  CLAUDE.md  CLAUDE_ASSESSMENT_PLAN.md  CONTEXT_EXCLUSION_VALIDATION_REPORT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  E2E_REGRESSION_TEST_RESULTS.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  SHARED_CONTEXT_SERVER_PATTERNS.md  SUPABASE_INTEGRATION_RESEARCH.md  analyze_test_failures.py  analyze_test_performance.py  codecov.yml  coverage.json  coverage.xml  custom_path.db-shm  custom_path.db-wal  database.sql  database_sqlite.sql  debug_add_message.py  debug_fastmcp_validation.py  debug_json_schema_generation.py  debug_lazy_loading.py  debug_metadata_validation.py  debug_mockcontext.py  debug_pytest_env.py  debug_test.py  debug_test_detailed.py  docker-compose.dev.yml  (+35 more)
.claude/: MCP_SETUP.md  development-standards.md  settings.json  settings.local.template.json
.claude-generic/: CLAUDE.md  README.md  development-standards.md
.claude-generic/agents/: docs.md  refactor.md
.claude-generic/commands/: framework-init.md
.claude-generic/tech-guides/: data-architecture.md  testing-patterns.md
.claude/agents/: cfw-developer.md  cfw-docs.md  cfw-refactor.md  cfw-researcher.md  cfw-tester.md  developer.md  docs.md  product-strategist.md  refactor.md  task-coordinator.md  tester.md
.claude/commands/: create-prp.md  execute-prp.md  feature-planning.md  framework-init.md  generate-prp.md  load-context.md  plan-feature.md  run-e2e-regression.md  run-prp.md  save-context.md
.claude/guides/: browser-automation.md  development-standards.md  mcp-toolkit-architecture.md  shared-context-integration.md  testing-architecture-stability.md
.claude/tech-guides/: ci.md  core-architecture.md  data-validation.md  error-handling.md  framework-integration.md  performance-optimization.md  security-authentication.md  testing.md  web-ui-architecture.md
.claude/workflows/: visual-validation.md
.codeql/: README.md  codeql-config.yml  sanitizers.qll
.cursor/rules/: use-claude-md.mdc
.gemini/: settings.json
.github/workflows/: ci.yml  docker-publish.yml  release-validation.yml  simplified-testing.yml
.kiro/steering/: product.md  structure.md  tech.md
PRPs/1-planning/: SUPABASE_INTEGRATION_RESEARCH.md  aggressive-aiosqlite-removal-plan.md  backend-notes.md  e2e-regression-findings-and-investigation-plan.md  shared-context-bug-reports.md  tech-guides-frontend-gaps-analysis.md  ui-notes-v2.md  ui-notes.md
PRPs/2-prps/: 001_aggressive-aiosqlite-removal-sqlalchemy-consolidation.md  001_phase-0-project-foundation.md  001_server-refactoring-file-compliance.md  002_phase-1-core-infrastructure.md  003_phase-2-essential-features.md  004_phase-3-multi-agent-features.md  005_phase-4-production-ready.md  007_sqlalchemy-core-migration.md  008_sqlalchemy-stabilization-simple.md  008_sqlalchemy-stabilization.md  010_multi-database-support.md  011_web-ui-implementation.md  026_multi-expert-collaboration-demo.md  028_cli-modular-refactoring.md  030_ui-autoscroll-improvements.md
PRPs/3-completed/: 001_phase-0-project-foundation.md  002_phase-1-core-infrastructure.md  003_phase-2-essential-features.md  004_phase-3-multi-agent-features.md  005_phase-4-production-ready.md  006_secure-token-authentication.md  007a_sqlalchemy-core-foundation.md  007b_database-manager-integration.md  007c_alembic-schema-definition.md  007d_migration-testing-validation.md  007e_postgresql-support.md  007f_cross-database-testing.md  009_sqlalchemy-minimal-kiss.md  010_multi-database-support.md  011_web-ui-implementation.md  012_websocket-realtime-broadcast-bridge.md  013_backend-configuration-centralization.md  014_dynamic-usage-guidance-tool.md  015_global-memory-dashboard.md  016_memory-ui-scope-improvements.md  017_server-refactoring-file-compliance.md  018_file-size-compliance-security-hardening.md  019_contextvar-authentication-migration.md  020_database-initialization-performance-optimization.md  021-aiosqlite-removal.md  022_server-functionality-alignment-bug-fix.md  023_test-performance-optimization-and-legacy-cleanup.md  024-flaky-test-stabilization.md  025_mcp-resources-prompts-templates-enhancement.md  026_multi-expert-collaboration-demo.md  027_cli-integration-scs-alias.md  028_mcp-inspector-cli-compatibility-fix.md  029_test-coverage-improvement-implementation.md  030_ui-autoscroll-improvements.md
PRPs/templates/: feature_planning_base.md
docs/: README.md  api-reference.md  dev-quick-start.md  development-setup.md  development.md  integration-guide.md  llm-error-examples.md  mcp-inspector-guide.md  multi-database-deployment.md  performance-guide.md  production-deployment.md  quick-reference.md  troubleshooting.md  v1.1.0-pre-release-validation.md  websocket-implementation.md  webui-implementation.md
mcp/: frame0.json  playwright.json
migrations/: 002_add_sender_type_column.py
scripts/: README.md  bump-version.py  coverage_dashboard.py  coverage_tracker.py  generate-keys.sh  generate_keys.py  makefile_help.py  migrate_to_memory_testing.py  module_coverage.py  setup.py  validate-version-consistency.py  validate_singleton_patterns.py
src/shared_context_server/: __init__.py  admin_guidance.py  admin_lifecycle.py  admin_resources.py  admin_tools.py  admin_tools_backup.py  auth.py  auth_context.py  auth_core.py  auth_secure.py  auth_tools.py  config.py  core_server.py  dashboard_auth.py  database.py  database_connection.py  database_manager.py  database_operations.py  database_sqlalchemy.py  database_testing.py  database_utilities.py  mcp_auth_middleware.py  memory_tools.py  models.py  models_core.py  prompts.py  search_tools.py  server.py  session_tools.py  (+5 more)
tests/: README.md  conftest.py  conftest_improved.py  e2e-llm-regression-test.md  test_backend_switching.py  test_database.py  test_multi_database_core.py  test_phase1_end_to_end.py  test_phase2_smoke.py  test_simplified_backend_switching.py  test_smoke.py  test_websocket_integration.py  test_webui_integration.py
(+156 files in other folders)
